Gnome-shell: Fix jumping effect in message list clear button

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -20,7 +20,6 @@ stage {
 .button, %button {
   @include button(normal);
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   &:focus { @include button(focus); }
   &:insensitive { @include button(insensitive); }
